# PHYS4070Assignment3

./: CMakeLists.txt  __autocommit.bat  __compile_and_run.bat  _defs.hpp  complex_vector_utils.cpp  complex_vector_utils.hpp  forces_and_integrators.cpp  forces_and_integrators.hpp  main.cpp
Docs/: PHYS4070 Dynamics of Interacting Quantum Systems.docx  Readme.docx  kroneck.py  runtime.grf
Docs/Media/: Rutime_N^2.grf  runtime.grf  sep.grf
part_1/: README.md  __compile_and_run.bat  complex_vector_utils.cpp  complex_vector_utils.hpp  forces_and_integrators.cpp  forces_and_integrators.hpp  main  main.cpp
part_1/results/: _plot.py
part_2/: LP_solvers.cpp  LP_solvers.hpp  _Q1  _Q1.cpp  _Q2  _Q2.cpp  _Q3  _Q3.cpp  __compile_and_run.bat  _defs.hpp  _single_ring  _single_ring.cpp  _testfile  complex_vector_utils.cpp  complex_vector_utils.hpp  dot_and_convert.cpp  dot_and_convert.hpp  energy.grf  main  main.cpp  matrix.cpp  matrix.hpp  matrix_complex.cpp  matrix_complex.hpp  physical_properties.cpp  physical_properties.hpp  testfile.cpp  vector_utils.cpp  vector_utils.hpp
part_2/results/: _Q2plot.py  _Q3plot.py  _singleparticle_plot.py
